--- a/index.ipynb
+++ b/index.ipynb
@@ -19,7 +19,9 @@
     "\n",
     "$Recall = \\frac{Number of True Positives}{Number of Predicted Positives}$  \n",
     "  \n",
-    "$Accuracy = \\frac{Number of True Positives + True Negative}{Total Observations}$"
+    "$Accuracy = \\frac{Number of True Positives + True Negative}{Total Observations}$\n",
+    "\n",
+    "![](./images/Precisionrecall.png)"
    ]
   },
   {
