corrected formula definition for precision and recall

--- a/index.ipynb
+++ b/index.ipynb
@@ -14,10 +14,10 @@
     "Now that we've started discussing classification, it's time to examine comparing our models to each other and choosing models of best fit. Previously in regression, we've been predicting values so it made sense to discuss error as a distance of how far off our estimates were. In classifying a binary variable however, we are either correct or incorrect. As a result, we tend to deconstruct this as how many false positives versus false negatives we come across.  \n",
     "In particular, we examine a few different specific measurements when evaluating the performance of a classification algorithm.  \n",
     "  \n",
-    "$Precision = \\frac{\\text{Number of True Positives}}{\\text{Number of Actual Total Positives}}$    \n",
+    "$Precision = \\frac{\\text{Number of True Positives}}{\\text{Number of Predicted Positives}}$    \n",
     "  \n",
     "\n",
-    "$Recall = \\frac{\\text{Number of True Positives}}{\\text{Number of Predicted Positives}}$  \n",
+    "$Recall = \\frac{\\text{Number of True Positives}}{\\text{Number of Actual Total Positives}}$  \n",
     "  \n",
     "$Accuracy = \\frac{\\text{Number of True Positives + True Negatives}}{\\text{Total Observations}}$"
    ]
@@ -536,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
